# muykol-chatbot

./: .gitignore  PIPELINE_TEST.md  PROJECT_STRUCTURE.md  infracost.yml  setup-oidc-cli.sh
.github/: README.md
.kiro/: SPEC_UPDATE_SUMMARY.md
muykol-chatbot-app/: .env.example  CLEANUP_SUMMARY.md  Dockerfile.backend.dev  Dockerfile.frontend.dev  LOCALSTACK_TESTING_GUIDE.md  README.md  SETUP_COMPLETE.md  docker-compose.localstack.yml  docker-compose.yml  pyproject.toml  requirements.txt  rxconfig.py  setup_env.sh  standalone_app.py
muykol-chatbot-app/design/: design-system.md  wireframes.md
muykol-chatbot-app/faith_motivator_chatbot/: __init__.py  faith_motivator_chatbot.py
muykol-chatbot-app/faith_motivator_chatbot/components/: __init__.py  auth_components.py  chat_components.py  common.py  navigation.py
muykol-chatbot-app/faith_motivator_chatbot/state/: __init__.py  auth_state.py  chat_state.py  ui_state.py
muykol-chatbot-app/localstack/: 01-create-dynamodb-tables.sh  02-create-sqs-queues.sh  03-setup-ses.sh  04-setup-secrets.sh  05-setup-cognito.sh  06-test-infrastructure.sh
muykol-chatbot-app/scripts/: cdk-utils.sh  deploy-dev.sh  deploy-prod.sh  deploy-staging.sh  dev_setup.sh  docker-test.sh  ecr-utils.sh  init-localstack-services.sh  seed_database.py  setup-github-oidc.sh  setup-github-token.sh  setup-localstack-testing.sh  start-localstack.sh  test-localstack-simple.sh  test-phase1-infrastructure.py  validate_env.py
muykol-chatbot-app/tests/: __init__.py  requirements.txt  test_accessibility.py
muykol-chatbot-infra/: .checkov.yml  INFRACOST_GUIDE.md  MANUAL_SETUP.md  PHASE_1_INFRASTRUCTURE_COMPLETE.md  PHASE_1_INFRASTRUCTURE_STATUS.md  README.md  (+9 more)
(+59 files in other folders)
